kubernetes/apps/networking/omada-controller/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omada-controller
spec:
  type: ExternalName
  externalName: lnx-srv01.explorer
