kubernetes/apps/networking/omada-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/enable: "false"
  name: omada-controller
spec:
  ingressClassName: nginx
  rules:
    - host: &host "omada.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: omada-controller
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - *host
